Initial draft work in progress

--- a/Content/A-Frontmatter-Topics/Company.htm
+++ b/Content/A-Frontmatter-Topics/Company.htm
@@ -4,16 +4,12 @@
         <link href="../Resources/TableStyles/SuspensionTable.css" rel="stylesheet" MadCap:stylesheetType="table" />
     </head>
     <body>
-        <p class="LikeH1_WithPageBreak"><MadCap:variable name="General.CompanyName" />
+        <p class="LookLikeHeading1"><MadCap:variable name="General.CompanyName" class="AvoidBreakBefore" />
         </p>
         <p>Experienced motorcyclists mentoring newer riders and helping the motorcycling community.</p>
         <p><MadCap:variable name="General.StreetAddress" />
         </p>
         <p><MadCap:variable name="General.CityStateZip" />
-        </p>
-        <p><MadCap:variable name="General.PhoneNumber" />
-        </p>
-        <p class="AvoidBreakAfter"><MadCap:variable name="General.Email" />
         </p>
         <p class="LookLikeHeading1">Version control</p>
         <table style="mc-table-style: url('../Resources/TableStyles/SuspensionTable.css');width: 100%;" class="TableStyle-SuspensionTable" cellspacing="0">
