--- a/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
+++ b/Content/D-Adjusting suspension-Topics/5-Refining the settings.htm
@@ -253,7 +253,7 @@
                 </tr>
             </tbody>
         </table>
-        <p>To refine a setting:</p>
+        <p class="AvoidBreakAfter">To refine a setting:</p>
         <ol>
             <li>
                 <p>Add or subtract one or two clicks from the damping being refined. Record the adjustment.</p>
