Initial draft. Work in progress.

--- a/Content/A-Frontmatter-Topics/LegalInformation.htm
+++ b/Content/A-Frontmatter-Topics/LegalInformation.htm
@@ -6,7 +6,7 @@
         <h1>Legal information</h1>
         <p><MadCap:variable name="General.Copyright" />
         </p>
-        <p>All rights reserved. No part of this book may be reproduced in any form on by an electronic or mechanical means, including information storage and retrieval systems, without permission in writing from the publisher, except by a reviewer who may quote brief passages in a review.</p>
+        <p>All rights reserved. No part of this book may be reproduced in any form on or by electronic or mechanical means, including information storage and retrieval systems, without permission in writing from the publisher, except by a reviewer who may quote brief passages in a review.</p>
         <p>To request permissions, contact the publisher at <MadCap:variable name="General.Email" /></p>
         <h1 class="AvoidBreakBefore">Disclaimer</h1>
         <p>This book does not replace the advice of a motorcycle suspension specialist. Consult your mechanic before making any changes to your motorcycle setup.</p>
