--- a/Content/B-Introduction-Topics/3-What do you need to adust your suspension.htm
+++ b/Content/B-Introduction-Topics/3-What do you need to adust your suspension.htm
@@ -3,27 +3,27 @@
     <head>
     </head>
     <body>
-        <h1>What do you need to adust your suspension?</h1>
+        <h1>What do you need to adjust your suspension?</h1>
         <p>You are going to need some basic tools.</p>
-        <p>Do not try and make do, adjusting the preload ring on your rear damper with a hammer and chisel (or just as worse, a screw driver) is going to damage your tools as well as the abused suspension components.</p>
-        <p>Buy, beg, or borrow the right tools. For more expensive items, several riders can form a syndicate and buy something between them.</p>
+        <p>Do not try and make do; adjusting the preload  ring on your rear damper with a hammer and chisel (or worse, a screwdriver) will damage your tools and the abused suspension components.</p>
+        <p>Buy, beg, or borrow the right tools. Several riders can form a syndicate for more expensive items and buy something between them.</p>
         <h2>Basic tools</h2>
-        <p>As a minimum you will need:</p>
+        <p>As a minimum, you will need:</p>
         <ul>
             <li>
                 <p>a spanner to fit the preload adjuster on top of the forks</p>
             </li>
             <li>
-                <p>a screwdriver or Allen key to fit the rebound damping adjuster on top of the forks</p>
+                <p>a screwdriver or Allen key to fit the rebound damping adjuster on the top of the forks</p>
             </li>
             <li>
-                <p>a screwdriver or Allen key to fit the compression damping adjuster at the bottom of the forks (on some bikes compression and rebound damping are on different fork legs at the top)</p>
+                <p>a screwdriver or Allen key to fit the compression damping adjuster at the bottom of the forks (on some bikes, compression and rebound damping are on different fork legs at the top)</p>
             </li>
             <li>
                 <p>a C spanner for adjusting the locking and preload rings on the rear damper</p>
             </li>
             <li>
-                <p>a screwdriver or Allen key to fit the rebound damping adjuster on top of the rear damper; some motorcycles have knobs so you can use your fingers</p>
+                <p>a screwdriver or Allen key to fit the rebound damping adjuster on the top of the rear damper; some motorcycles have knobs so you can use your fingers</p>
             </li>
             <li>
                 <p>a screwdriver or Allen key to fit the compression damping adjuster on the bottom of the rear damper; some motorcycles have knobs so you can use your fingers</p>
@@ -35,7 +35,7 @@
                 <p>a notepad and pen (or pencil)</p>
             </li>
         </ul>
-        <p>Instead of a spanner to adust fork preload you can use a socket. Another useful tool is a tee wrench, with the right size head. If access is tight, you can buy a tee wrench and grind the shaft to get extra clearance. A Tee wrench, or socket set used in the same way, allows you to make full turns without removing the socket head, making counting turns easier.</p>
+        <p>Instead of a spanner to adust fork preload, you can use a socket. Another useful tool is a tee-wrench with the right size head. If access is tight, you can buy a tee wrench and grind the shaft to get extra clearance. A Tee wrench, or socket set used in the same way, allows you to make full turns without removing the socket head, making counting turns easier.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/T wrench.png" title="T wrench" alt="A T wrench has a tee handle one end and a socket the other" MadCap:mediastyle="@media print { width: 50%; }" />
         </p>
@@ -50,7 +50,7 @@
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Twin lug C spanner.png" title="C spanner with two lugs" alt="A C spanner has a semi-circular end with a pin to turn adjusting rings; if it has two lugs the lower can be used to turn the ring in the opposite direction" MadCap:mediastyle="@media print { width: 50%; }" />
         </p>
-        <p>A tape measure is used for measuring how much the suspension compresses. A steel ruler or vernier calliper can also be used, particularly on front suspension. It is a good idea to use a measuring device that shows millimetres, it makes calculations a lot simpler.</p>
+        <p>A tape measure is used to measure how much the suspension compresses. A steel ruler or vernier calliper can also be used, particularly on the front suspension. It is a good idea to use a measuring device that shows millimetres; it makes calculations a lot simpler.</p>
         <h2>Other tools</h2>
         <p>Other tools, while not essential, make the job easier.</p>
         <p>Tools to consider include:</p>
@@ -68,7 +68,7 @@
                 <p>a sag scale</p>
             </li>
             <li>
-                <p>a spreadsheet on a PC, tablet, or smart phone</p>
+                <p>a spreadsheet on a PC, tablet, or smartphone</p>
             </li>
         </ul>
     </body>
