--- a/Content/C-About suspension-Topics/1-Suspension.htm
+++ b/Content/C-About suspension-Topics/1-Suspension.htm
@@ -7,10 +7,10 @@
         <p>Suspension does two things:</p>
         <ol>
             <li>
-                <p>Makes the ride more comfortable for the rider.</p>
+                <p>It makes the ride more comfortable for the rider.</p>
             </li>
             <li>
-                <p>Keeps the loaded tyres in contact with the road surface.</p>
+                <p>It keeps the loaded tyres in contact with the road surface.</p>
             </li>
         </ol>
         <p>That's it.</p>
