Initial draft. Proffing using Grammarly.

--- a/Content/B-Introduction-Topics/1-Introduction.htm
+++ b/Content/B-Introduction-Topics/1-Introduction.htm
@@ -6,7 +6,7 @@
         <h1>Introduction</h1>
         <p>Modern motorcycles are the result of over 100 years of engineering.</p>
         <p>Motorcycles have always been at the cutting edge of performance and much closer to racing machinery than their four-wheel counterparts. A motorcycle that costs a quarter of the average person's annual pay offers comparable performance to exotic cars that cost at least ten times as much.</p>
-        <p>Today's average high-performance street bike would have delighted a race rider twenty years ago. The same goes for tyres; today's tyres offer unheard-of levels of grip, not out of place on a not too distant past race track, while delivering astonishing mileage.</p>
+        <p>Today's average high-performance street bike would have delighted a race rider twenty years ago. The same goes for tyres; today's tyres offer unheard-of levels of grip, not out of place on a not-too-distant past race track, while delivering astonishing mileage.</p>
         <p>Some consider the price to be complexity. Motorcycles now have multiple rider aids. Anti-lock braking, traction control, stability control, wheelie control, adjustable engine braking, throttle sensitivity, power modes, and other electronic devices have made modern motorcycles safer. The ability to adjust or turn off these riders' aids means riders can select how much control the bike has over the ride.</p>
         <p>Suspension, too, has evolved to the point where most motorcycles have some form of adjustability, allowing the rider to fine-tune their motorcycle's comfort and handling.</p>
         <p>In the past, suspension was seen as a black art. This put a lot of people off making adjustments, leaving them saying, "The manufacturer knows better than me...".</p>
