--- a/Content/C-About suspension-Topics/2-Spring preload.htm
+++ b/Content/C-About suspension-Topics/2-Spring preload.htm
@@ -7,7 +7,7 @@
         <p>Most people are familiar with springs. They range in size from minuscule, such as in a watch, to huge.</p>
         <h2>Spring types</h2>
         <p>Springs come in several different forms. They all store energy and release it once the load is reduced. There is some energy lost through internal friction that is converted to heat.</p>
-        <p>A spring can be a flat piece of steel that bends and returns to its original shape. There must be an eye that attaches to a pivot and shackle on at least one end to allow the spring to bend. Several can be added together. This sort of spring is a leaf spring.</p>
+        <p>A spring can be a flat piece of steel that bends and returns to its original shape. Several can be added together. This sort of spring is a leaf spring.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Leaf Spring.png" title="Leaf spring" alt="A leaf spring is a flat piece of metal that nees a pivot on at least one end to allow it to bend" class="CentreAlign" style="width: 400px;" />
         </p>
@@ -15,7 +15,7 @@
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Torsion bar.png" style="width: 250px;" title="Torsion bar" alt="Torsion bars store energy when they are twisted" MadCap:mediastyle="@media print { width: 50%; }" />
         </p>
-        <p>There are springs that are wound into a spiral, and pull back when released, such as a tape measure. They can also push back, such as a watch spring.</p>
+        <p>Some springs, such as a tape measure, are wound into a spiral and pull back when released. They can also push back, such as a watch spring.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Watch spring.png" title="Watch spring" alt="A spiral spring can store energy when it is pulled out, or when wound tight" style="width: 148px;" />
         </p>
@@ -24,26 +24,26 @@
             <img src="../Resources/Images/Project/coil spring.png" title="Coil spring" alt="Coils springs are wound around and have a constant diameter" style="width: 33%;" />
         </p>
         <h2>Spring rates</h2>
-        <p>The characteristics of a spring are expressed by how far they move under a specific load. Or, more precisely, the amount of force necessary to compress a spring a set distance.</p>
-        <p>Spring rates are usually expressed in metric (kilogram per millimetre) or imperial (pounds per inch). If the spring is rated at 10 kilograms per millimetre it means if you apply 10 kilograms of weight to the top of the spring, it will compress 1 millimetre. 20 kilograms, 2 millimetres. 50 kilograms, 5 millimetres. And so on until the spring cannot compress any more.</p>
+        <p>The characteristics of a spring are expressed by how far they move under a specific load. Or, more precisely, the force required to compress the spring a set distance.</p>
+        <p>Spring rates are usually expressed in metric (kilogram per millimetre) or imperial (pounds per inch). If the spring is rated at 10 kilograms per millimetre, it means if you apply 10 kilograms of weight to the top of the spring, it will compress 1 millimetre. 20 kilograms, 2 millimetres. 50 kilograms, 5 millimetres. And so on until the spring cannot compress anymore.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Spring rate.png" title="Spring rate chart" alt="The chart shows the straight line progression in spring travel related to spring force" class="CentreAlign" />
         </p>
-        <p>This example is using a linear spring rate. There are also progressive springs, identifiable by an uneven winding. The top of the spring is narrowly wound and the coils get further apart towards the base. The more the spring compresses, the higher the spring rate becomes.</p>
+        <p>This example uses a linear spring rate. There are also progressive springs, identifiable by an uneven winding. The top of the spring is narrowly wound, and the coils get further apart towards the base. The more the spring compresses, the higher the spring rate becomes.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Progressive spring.png" title="Progressive spring" alt="Progressive springs have coils that have varying spaces" MadCap:mediastyle="@media print { width: 400px; }" />
         </p>
-        <p>This might sound like a good idea but the results are usually too unpredictable. It is uncommon for high end suspension to use progressive springs.</p>
+        <p>Progressive springs might sound like a good idea, but the results are usually too unpredictable. It is uncommon for a high-end suspension to use progressive springs.</p>
         <h2>Identifying spring rate</h2>
-        <p>You cannot identify spring rate just by measuring the spring diameter, material thickness, or coil spacing. The only way is to look at the manufacturer's markings or place weight on the spring to see how far it compresses.</p>
-        <p>Springs can be made from a variety of materials including steel, titanium, carbon fibre etc. Depending on the quality of the materials used a heavy coil spring with closely wound coils might have the same spring rate as a spring from a different manufacturer that is from smaller diameter stock with widely spaced coils. While the second spring sounds better because it is lighter it will probably cost far more to make.</p>
+        <p>You cannot identify spring rate by measuring the spring diameter, material thickness, or coil spacing. The only way is to look at the manufacturer's markings or place weight on the spring to see how far it compresses.</p>
+        <p>Springs can be made from various materials, including steel, titanium, or carbon fibre. Depending on the quality of the materials used, heavy coil springs with closely wound coils might have the same spring rate as a spring from a different manufacturer that is from smaller diameter stock with widely spaced coils. While the second example sounds better because it is lighter, it will probably cost far more to make.</p>
         <h2>Spring preload</h2>
-        <p>When a spring is installed in the suspension (whether it is internal in the forks or an external coil over on the rear) the spring is usually slightly compressed. The distance between the spring's free length to its installed length when the suspension is fully extended is spring preload.</p>
+        <p>When a spring is installed (whether it is internal in the forks or an external coil over on the rear), it is usually slightly compressed. Spring preload is the distance between the spring's free length to its installed length when the suspension is fully extended.</p>
         <p>The spring will exert a force on the end of the fork tube or adjusting ring on a rear shock. This force is <MadCap:glossaryTerm glossTerm="Glossary.Term1">preload force</MadCap:glossaryTerm>.</p>
-        <p>It takes the same amount of force as the preload force before the suspension will start to move. If the preload force is 5 kilograms, then 5 kilograms of force is needed. If the spring rate is 10 kilograms per millimetre and it has 5 kilograms of preload force it means if you apply 10 kilograms of weight to the top of the spring, it will compress 0.5 millimetres.</p>
+        <p>It takes the same force as the preload force before the suspension starts to move. If the preload force is 5 kilograms, then 5 kilograms of force is needed. If the spring rate is 10 kilograms per millimetre and it has 5 kilograms of preload force, it means if you apply 10 kilograms of weight to the top of the spring, it will compress 0.5 millimetres.</p>
         <p class="CentreAlign">
             <img src="../Resources/Images/Project/Spring rate with preload.png" title="Spring rate with preload" alt="Although the spring rate is the same, added preload means it takes more weight before the spring starts to compress" />
         </p>
-        <p class="Important">The preload needs to be adjusted so the mass of the motorcycle supported by the spring, plus the weight of the rider, compresses the spring the right amount, typically about 1/3 of the suspension's travel.</p>
+        <p class="Important">The preload needs to be adjusted so the mass of the motorcycle supported by the spring, plus the rider's weight, compresses the spring the right amount, typically about 1/3 of the suspension's travel.</p>
     </body>
 </html>
