--- a/Content/B-Introduction-Topics/2-Using this resource.htm
+++ b/Content/B-Introduction-Topics/2-Using this resource.htm
@@ -5,7 +5,7 @@
     <body>
         <h1 class="AvoidBreakBefore">Using this resource</h1>
         <p>This resource is divided into two main sections.</p>
-        <p>The first section is about suspension and tries to explain concepts in simple language. It is by no means a definitive guide but hopefully a first step in learning about suspension. If it inspires you to conduct further research, it has done its job.</p>
+        <p>The first section is about suspension and tries to explain concepts in simple language. It is by no means a definitive guide but hopefully a first step in learning about suspension. It has done its job if it inspires you to conduct further research.</p>
         <p>The second part of the resource is about doing a basic suspension setup. It does not replace a setup done by a suspension expert, but it will help put your motorcycle suspension in a narrower window that an expert would set up.</p>
     </body>
 </html>
